# TestProject

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bd.sh  build_cross.sh
app/: CMakeLists.txt  run_serial.cpp  test_ap.cpp  test_serial.cpp
cmake/: arm-cross-toolchain.cmake  toolchain.cmake
inc/: uart_api_config.h
inc/Common/: Common.hpp  TimeImpl.hpp
inc/Roborock/: Roborock.hpp
inc/SerialPort/: SerialPort.hpp
inc/include/: HC_data_struct.hpp  HC_l2_sdk.hpp  LD_pointdata.hpp  LD_rtrnet.hpp  LD_sslbf.hpp  LD_trnet.hpp  bd_dsp_slave_boot_download.h  bl.h  common_mcu.h  data_parse.h  dock_communication.h  dock_parse.h  dtof_dev.h  fw.h  mcu_communication.h  md5.h  mouse.h  paa5102_ap_mouse.h  raa_audio.h  raa_motor.h  raa_sensor_barometer.h  raa_sensor_brushlift.h  raa_sensor_switches.h  raa_sensor_water_pump.h  rca_camera.h  rca_camera_eeprom.h  rca_camera_led.h  rca_camera_usb.h  rca_image_yuv2bmp.h  rca_lasercam.hpp  rda_ap_led.h  rda_headers.h  rda_rtc_api.h  rla_log.h  rla_pcmd.h  rma_coredump.h  rma_file_combine.h  rma_misc.h  rpmsg_common.h  rpmsg_communication.h  (+55 more)
inc/include/rca_camera/: rca_camera_1C1L.h  rca_camera_2C1L.h  rca_camera_2C2L.h  rca_camera_2C3L.h  rca_camera_9383c.h  rca_camera_aw813_2.h  rca_camera_common.h  rca_camera_eeprom_1C1L.h  rca_camera_eeprom_2C1L.h  rca_camera_eeprom_2C2L.h  rca_camera_eeprom_2C3L.h  rca_camera_eeprom_9383c.h  rca_camera_eeprom_9383c_lasercam.h  rca_camera_eeprom_aw813_2.h  rca_camera_eeprom_common.h  rca_camera_eeprom_mr527.h  rca_camera_eeprom_mr536.h  rca_camera_eeprom_only_ir.h  rca_camera_eeprom_r16_lasercam.h  rca_camera_eeprom_refactor.h  rca_camera_led_2.h  rca_camera_mr527.h  rca_camera_mr536.h  rca_camera_only_ir.h  rca_camera_refactor.h  rca_tof_refactor.h  rca_usb_camera_eeprom.h
src/: CMakeLists.txt
src/Common/: CMakeLists.txt  Common.cpp  TimeImpl.cpp
src/Roborock/: CMakeLists.txt  Roborock.cpp
src/SerialPort/: CMakeLists.txt  SerialPort.cpp
test/: CMakeLists.txt  utest_get_mcu_data.cpp  utest_set_mcu_data.cpp  utest_set_odo.cpp  utest_toggle_gpio.sh
